cmake (2.8.0~rc6-0r1) UNRELEASED; urgency=low

  * New upstream development release.

 -- Modestas Vainius <modestas@vainius.eu>  Tue, 10 Nov 2009 20:25:36 +0200

cmake (2.8.0~rc5-1) experimental; urgency=low

  * New upstream development release.
    - FindJNI.cmake does no longer get confused about multiple JVM installs
      (Closes: #553151).
  * Switch to dpkg-source format 3.0 (quilt):
    - drop build dependency on quilt;
    - drop quilt.make snippet include from debian/rules.
  * Build with CMAKE_USE_RELATIVE_PATHS=ON.
  * Drop tcp8.4 from build depends. Not needed.

 -- Modestas Vainius <modestas@vainius.eu>  Fri, 06 Nov 2009 22:47:17 +0200

cmake (2.8.0~rc3-1) experimental; urgency=low

  * New upstream development release.
    - ctest no longer segfaults on such a invalid input (Closes: #528530).
  * Drop all patches:
    - FindQt4.cmake2.6.diff - remove, no longer needed as original bug has been
      fixed since 2.6;
    - FindQt3.cmake.diff - remove, merged upstream;
    - findmpeg2-addpath.diff - remove, bug fixed upstream (in other way);
    - kfreebsd-Platform.diff - remove, merged upstream;
    - executables-dont-need-fpic.diff - remove, merged upstream;
    - manpage_friendly_docs.diff - remove, merged upstream;
    - fix_bashisms.diff - remove, merged upstream;
    - FindPerlLibs.cmake-perl-5.10.diff - remove, fixed upstream differently;
    - FindJNI.cmake-more-arches.diff - remove, was taken from upstream;
    - FindVTK.cmake-vtk-5.4.diff - remove, was taken from upstream.
  * Update install files.
  * Call dpkg with --print-architecture rather than obsolete 
    --print-installation-architecture.
  * Fix lintian override cmake-data: extra-license-file.
  * Remove obsolete README.Debian.
  * cmake-curses-gui should not provide cmake-gui.

 -- Modestas Vainius <modestas@vainius.eu>  Sun, 11 Oct 2009 15:09:42 +0300

cmake (2.6.4-3) unstable; urgency=low

  * Bump Standards-Version to 3.8.3, no changes needed.