@@ -4,7 +4,7 @@ Priority: optional
 Maintainer: A. Maitland Bottoms <bottoms@debian.org>
 Uploaders: Modestas Vainius <modestas@vainius.eu>
 DM-Upload-Allowed: yes
-Build-Depends: debhelper (>= 7), libcurl4-gnutls-dev, libxmlrpc-c3-dev, libexpat1-dev, zlib1g-dev,
+Build-Depends: debhelper (>= 7.3), libcurl4-gnutls-dev, libxmlrpc-c3-dev, libexpat1-dev, zlib1g-dev,
  libncurses5-dev, libqt4-dev (>= 4.4.0)
 Standards-Version: 3.8.3
 Vcs-Git: git://git.debian.org/git/collab-maint/cmake.git
